# yep-fpv

./: .dockerignore  .gitignore  Dockerfile  deploy.sh  deploy_only2build.sh  deploy_only2run.sh  menu.sh  pyproject.toml  scan_fpv.sh  scan_log.txt
DB_misc/: FPV-MetaManagement.sql  test_devices.sql
lark_bots/: get_chat_id.py  main.py  scan_service.py  test.py  test_scan_service.py  test_ws.py
scanner/: MIGRATION.md  README.md
scanner/scan/: __init__.py  export_formatted_csv.py  info_scan.py  metadata_scan.py
scanner/tools/: __init__.py  add_devices.py  analyze_segment_count.py  diagnose_session.py  fix_front_filesize.py  generate_approvers_csv.py  list_active_devices.py  test_auto_fix.py  test_devices.py
scanner/validate/: __init__.py  verify_device_duration.py  verify_session_segments.py
utils/: external_connections.py
